<resources>
    <string name="app_name">Conversions</string>
    <string name="settings">Settings</string>
    <string name="quit_game">Quit Game</string>
    <string name="start_game">Start Game</string>
    <string name="conversions1">CONVERSIONS</string>
    <string name="reset">RESET</string>
    <string name="next">NEXT</string>
    <string name="conversions">CONVERSIONS</string>
    <string name="Age">Age</string>
    <string name="Password">Password</string>
    <string name="UserLogin">Email Address</string>
    <string name="FullName">Full Name</string>
    <string name="email_address">email_address</string>
    <string name="full_name">full_name</string>
</resources>