<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="312dp"
        android:layout_height="100dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/conversions"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,UnknownIdInLayout" />

    <Button
        android:id="@+id/regUser"
        android:layout_width="323dp"
        android:layout_height="55dp"
        android:text="REGISTER USER"
        android:textColor="#ffffff"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.215"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/user"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="280dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/age"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/age"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>